IE8 Fixes:
-Minor CSS fix for horiz. scrollbar in list view
-Fix breadcrumb click event not triggering

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -931,7 +931,7 @@ div.notification.corner-alert:hover div.message span {
 /*List view*/
 div.panel div.list-view {
   overflow: auto;
-  height: 668px;
+  height: 652px;
   margin-top: 30px;
   border-bottom: 1px solid #E7E7E7;
 }
